--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -7,7 +7,7 @@ import { getCollection } from 'astro:content';
 import FormattedDate from '../../components/FormattedDate.astro';
 
 const posts = (await getCollection('blog')).sort(
-	(a, b) => a.data.pubDate.valueOf() - b.data.pubDate.valueOf()
+	(a, b) => b.data.pubDate.valueOf() - a.data.pubDate.valueOf()
 );
 ---
 
@@ -18,6 +18,9 @@ const posts = (await getCollection('blog')).sort(
 		<style>
 			main {
 				width: 960px;
+			}
+			ul, li {
+				margin-top: 0px;
 			}
 			ul li {
 				display: flex;
@@ -33,30 +36,45 @@ const posts = (await getCollection('blog')).sort(
 			ul li a p {
 				margin-bottom: 10px;
 			}
+			.top-img {
+				margin-left: 2rem;
+			}
+			.bottom-img {
+				margin-left: 50rem;
+			}
+			.center-text {
+				text-align: center;
+			}
 			.post {
+				width: 100%;
 				margin: 5%;
-				padding: 1px;
+				padding: 1rem;
 				color: var(--text);
 				line-height: 1;
+				border: solid var(--blend-text) 1px;
+				background-color: var(--bg-dark);
+				border-radius: 10px;
 			}
 			.date {
 				font-size: 17px;
-				color: var(--blend-text)
+				color: var(--blend-text);
 			}
 		</style>
 	</head>
 	<body>
 		<Header />
 		<main>
+			<h3 class="center-text">✍️ Writings ✍️</h3>
 			<section>
+				<img class="top-img" src="/LatestBlogPost.png" alt="Check out my latest blog post">
 				<ul>
 					{
 						posts.map((post) => (
 							<li>
 								<a href={`/blog/${post.slug}/`} class="post">
-									<div class="title">
+									<div>
 										<h4><b>{post.data.title}</b></h4>
-										<p class="date"><i>Committed to writing <b><FormattedDate date={post.data.pubDate} /></b></i></p>
+										<p class="date"><i>🪶 Committed to writing <b><FormattedDate date={post.data.pubDate} /></b></i></p>
 									</div>
 									<p>{post.data.description}</p>
 								</a>
@@ -64,6 +82,7 @@ const posts = (await getCollection('blog')).sort(
 						))
 					}
 				</ul>
+				<img class="bottom-img" src="/FoundTheEnd.png" alt="Welp, found the end. Congrats!">
 			</section>
 		</main>
 		<Footer />
