--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -6,8 +6,42 @@
 	--bg-dark: #232832;
 	--text: #cbd2e1;
 	--blend-text: #76829d;
+	--text-box: #20242e;
 	--box-shadow: 0 2px 6px rgba(var(--gray), 25%), 0 8px 24px rgba(var(--gray), 33%),
 		0 16px 32px rgba(var(--gray), 33%);
+}
+.quote-mini-text {
+	color: var(--blend-text);
+	font-size: 0.75em;
+	font-style: italic;
+}
+.spoiler {
+	display: inline-flex;
+	padding: 0px 2px;
+	background-color: var(--text-box);
+	color: var(--text-box);
+	border-radius: 8px;
+	transition: color 0.25s;
+}
+.spoiler:hover {
+	color: var(--text);
+}
+.center-text {
+	text-align: center;
+}
+.post {
+	width: 100%;
+	margin: 5%;
+	padding: 1rem;
+	color: var(--text);
+	line-height: 1;
+	border: solid var(--blend-text) 1px;
+	background-color: var(--bg-dark);
+	border-radius: 10px;
+}
+.date {
+	font-size: 17px;
+	color: var(--blend-text);
 }
 @font-face {
 	font-family: "Source Sans 3";
@@ -72,17 +106,12 @@ b {
 	font-weight: 700;
 }
 a {
-	text-decoration-line: underline;
+	text-decoration: var(--text) underline;
+	color: var(--text);
 }
 a:hover {
 	color: var(--hover);
 	text-decoration-line: underline;
-}
-p {
-	margin-bottom: 1em;
-}
-.prose p {
-	margin-bottom: 2em;
 }
 textarea {
 	width: 100%;
@@ -101,7 +130,7 @@ img {
 }
 code {
 	padding: 2px 5px;
-	background-color: #20242e;
+	background-color: var(--text-box);
 	border-radius: 8px;
 }
 pre {
@@ -115,6 +144,8 @@ blockquote {
 	padding: 0 0 0 20px;
 	margin: 0px;
 	font-size: 1.333em;
+	border-left: 5px solid var(--bg-dark);
+	color: var(--text);
 }
 hr {
 	border: none;
