feat: Finish home page
Fixes up the status, roles page, and overall
home page!

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -13,7 +13,8 @@ import HeaderLink from './HeaderLink.astro';
 </header>
 <style>
 	header {
-		margin: 0;
+		margin-left: auto;
+		margin-right: auto;
 		padding: 0 1em;
 		background: var(--bg);
 	}
