--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,8 @@
 ---
 import BaseHead from '../components/BaseHead.astro';
 import Header from '../components/Header.astro';
+import Status from '../components/Status.astro'
+import Roles from '../components/Roles.astro';
 import Footer from '../components/Footer.astro';
 import { SITE_TITLE, SITE_DESCRIPTION, LINKS } from '../consts';
 ---
@@ -44,20 +46,19 @@ import { SITE_TITLE, SITE_DESCRIPTION, LINKS } from '../consts';
 			</blockquote>
 			<img src="/FourthOption.png" alt="I'm the fourth option">
 			<p>
+				I am an avid multitasker and cannot focus on one thing for too long. Call it whatever you want, but it's <i>not</i> a trait I enjoy.
+			</p>
+			<p>
+				Currently, I'm:
+			</p>
+			<Status />
+			<p>
 				I consider myself a person of many hats. More specifically, an individual incapable of actually focusing on one thing at a time.
 				I hold many a role, mostly of minimal importance, but here they are anyway:
 			</p>
+			<Roles />
 			<p>
-				<code>💾 Self Taught Programmer</code>
-				<code>🌐 Web Dev</code>
-				<code>👾 Game Dev</code>
-				<br>
-				<code>💽 Systems Programming</code>
-				<code>🪶 Writer</code>
-				<code>🎨 Artist</code>
-				<code>🎥 <a href={LINKS.youtube} target="_blank" rel="noopener noreferrer">YouTube Person</a></code>
-				<code>🎙️ <a href={LINKS.twitch} target="_blank" rel="noopener noreferrer">Twitch Person</a></code>
-				<code>💙 VS Code btw</code>
+				Thanks for visiting my little corner on the internet. Enjoy the reading! ✌️
 			</p>
 		</main>
 		<Footer />
