--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -39,6 +39,18 @@
 	background-color: var(--bg-dark);
 	border-radius: 10px;
 }
+.special-box {
+	padding: 1rem;
+	color: var(--text);
+	line-height: 1;
+	border: solid var(--blend-text) 1px;
+	background-color: var(--bg-dark);
+	border-radius: 10px;
+}
+.special-box code {
+	line-height: 2;
+	background-color: #181b21;
+}
 .date {
 	font-size: 17px;
 	color: var(--blend-text);
