feat: Finish about me page

--- a/src/components/Status.astro
+++ b/src/components/Status.astro
@@ -3,26 +3,23 @@
 ---
 
 <div class="special-box">
+    <h5>Currently, I'm...</h5>
     <ul>
         <li>
             🔮 Building <a href="https://grayvox.itch.io/noirdo">Noirdo</a>, a little 8 bit stealth game about shadow creatures
         </li>
-        <br>
         <li>
             💾 Taking a course on <a href="https://www.boot.dev/courses/learn-memory-management-c">memory management with C</a>
         </li>
-        <br>
         <li>
             🐕 Writing the concept for a game about a dog
         </li>
-        <br>
         <li>
             😔 On a "break" from art (I can't art right now)
         </li>
-        <br>
         <li>
             🔴 Preparing for my Twitch streamer arc
         </li>
     </ul>
-    <p class="quote-mini-text">Status last updated 10/23/2024</p>
+    <p class="mini-text">Status last updated 10/23/2024</p>
 </div>
