--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -5,57 +5,110 @@ import Layout from '../layouts/BlogPost.astro';
 <Layout
 	title="About Me"
 	description="Lorem ipsum dolor sit amet"
-	pubDate={new Date('August 08 2021')}
+	pubDate={new Date('October 24 2024')}
 >
 	<p>
-		Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-		labore et dolore magna aliqua. Vitae ultricies leo integer malesuada nunc vel risus commodo
-		viverra. Adipiscing enim eu turpis egestas pretium. Euismod elementum nisi quis eleifend quam
-		adipiscing. In hac habitasse platea dictumst vestibulum. Sagittis purus sit amet volutpat. Netus
-		et malesuada fames ac turpis egestas. Eget magna fermentum iaculis eu non diam phasellus
-		vestibulum lorem. Varius sit amet mattis vulputate enim. Habitasse platea dictumst quisque
-		sagittis. Integer quis auctor elit sed vulputate mi. Dictumst quisque sagittis purus sit amet.
+		Home page wasn't enough for you? Honestly I'm glad you're here regardless, because SOMEONE has to read 
+		this or it was all for nothing. 😭
 	</p>
-
 	<p>
-		Morbi tristique senectus et netus. Id semper risus in hendrerit gravida rutrum quisque non
-		tellus. Habitasse platea dictumst quisque sagittis purus sit amet. Tellus molestie nunc non
-		blandit massa. Cursus vitae congue mauris rhoncus. Accumsan tortor posuere ac ut. Fringilla urna
-		porttitor rhoncus dolor. Elit ullamcorper dignissim cras tincidunt lobortis. In cursus turpis
-		massa tincidunt dui ut ornare lectus. Integer feugiat scelerisque varius morbi enim nunc.
-		Bibendum neque egestas congue quisque egestas diam. Cras ornare arcu dui vivamus arcu felis
-		bibendum. Dignissim suspendisse in est ante in nibh mauris. Sed tempus urna et pharetra pharetra
-		massa massa ultricies mi.
+		Naturally, we're going to divide this into multipoint lists and special boxes with super cool 
+		<code>box-shadow</code> properties tied to them for as much dramatic effect as possible.
 	</p>
-
 	<p>
-		Mollis nunc sed id semper risus in. Convallis a cras semper auctor neque. Diam sit amet nisl
-		suscipit. Lacus viverra vitae congue eu consequat ac felis donec. Egestas integer eget aliquet
-		nibh praesent tristique magna sit amet. Eget magna fermentum iaculis eu non diam. In vitae
-		turpis massa sed elementum. Tristique et egestas quis ipsum suspendisse ultrices. Eget lorem
-		dolor sed viverra ipsum. Vel turpis nunc eget lorem dolor sed viverra. Posuere ac ut consequat
-		semper viverra nam. Laoreet suspendisse interdum consectetur libero id faucibus. Diam phasellus
-		vestibulum lorem sed risus ultricies tristique. Rhoncus dolor purus non enim praesent elementum
-		facilisis. Ultrices tincidunt arcu non sodales neque. Tempus egestas sed sed risus pretium quam
-		vulputate. Viverra suspendisse potenti nullam ac tortor vitae purus faucibus ornare. Fringilla
-		urna porttitor rhoncus dolor purus non. Amet dictum sit amet justo donec enim.
+		Ready, dear traveller? LET'S A GO! *Mario pipe noises*
 	</p>
-
-	<p>
-		Mattis ullamcorper velit sed ullamcorper morbi tincidunt. Tortor posuere ac ut consequat semper
-		viverra. Tellus mauris a diam maecenas sed enim ut sem viverra. Venenatis urna cursus eget nunc
-		scelerisque viverra mauris in. Arcu ac tortor dignissim convallis aenean et tortor at. Curabitur
-		gravida arcu ac tortor dignissim convallis aenean et tortor. Egestas tellus rutrum tellus
-		pellentesque eu. Fusce ut placerat orci nulla pellentesque dignissim enim sit amet. Ut enim
-		blandit volutpat maecenas volutpat blandit aliquam etiam. Id donec ultrices tincidunt arcu. Id
-		cursus metus aliquam eleifend mi.
-	</p>
-
-	<p>
-		Tempus quam pellentesque nec nam aliquam sem. Risus at ultrices mi tempus imperdiet. Id porta
-		nibh venenatis cras sed felis eget velit. Ipsum a arcu cursus vitae. Facilisis magna etiam
-		tempor orci eu lobortis elementum. Tincidunt dui ut ornare lectus sit. Quisque non tellus orci
-		ac. Blandit libero volutpat sed cras. Nec tincidunt praesent semper feugiat nibh sed pulvinar
-		proin gravida. Egestas integer eget aliquet nibh praesent tristique magna.
-	</p>
+	<div class="special-box">
+		<h3>Technologies</h3>
+		<h5>Languages</h5>
+		<a href="https://developer.mozilla.org/en-US/docs/Web/HTML"><img src="https://skillicons.dev/icons?i=html" /></a>
+		<a href="https://developer.mozilla.org/en-US/docs/Web/CSS"><img src="https://skillicons.dev/icons?i=css" /></a>
+		<a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript"><img src="https://skillicons.dev/icons?i=js" /></a>
+		<a href="https://typescriptlang.org"><img src="https://skillicons.dev/icons?i=ts" /></a>
+		<a href="https://ruby-lang.org"><img src="https://skillicons.dev/icons?i=ruby" /></a>
+		<a href="https://java.com"><img src="https://skillicons.dev/icons?i=java" /></a>
+		<a href="https://en.wikipedia.org/wiki/C_(programming_language)"><img src="https://skillicons.dev/icons?i=c" /></a>
+		<h5>Web Frontend</h5>
+		<a href="https://astro.build"><img src="https://skillicons.dev/icons?i=astro" /></a>
+		<a href="https://vite.dev"><img src="https://skillicons.dev/icons?i=vite" /></a>
+		<h5>Game Dev</h5>
+		<a href="https://godotengine.org"><img src="https://skillicons.dev/icons?i=godot" /></a>
+		<h5>Need To Learn...</h5>
+		<a href="https://vuejs.org"><img src="https://skillicons.dev/icons?i=vue" /></a>
+		<a href="https://react.dev"><img src="https://skillicons.dev/icons?i=react" /></a>
+		<a href="https://elixir-lang.org"><img src="https://skillicons.dev/icons?i=elixir" /></a>
+		<a href="https://go.dev"><img src="https://skillicons.dev/icons?i=go" /></a>
+		<a href="https://rust-lang.org"><img src="https://skillicons.dev/icons?i=rust" /></a>
+	</div>
+	<br>
+	<div class="special-box">
+		<h3>Interests</h3>
+		<span class="mini-text">(Outside of programming, that is.)</span>
+		<ul>
+			<li>
+				🕹️ Video games (Horror, RPG, and Retro 2D mainly)
+			</li>
+			<li>
+				💽 Hardware engineering
+			</li>
+			<li>
+				🎨 Artist (Pixel art, voxel art, and 3D printing mainly)
+			</li>
+			<li>
+				🏛️ Architecture
+			</li>
+			<li>
+				🪩 3D modeling
+			</li>
+			<li>
+				🎥 Video editing
+			</li>
+			<li>
+				🎸 Guitar
+			</li>
+		</ul>
+	</div>
+	<br>
+	<div class="special-box">
+		<h3>Office Setup</h3>
+		<ul>
+			<li>
+				<h5>🖥️ Computer</h5>
+			</li>
+			<li>
+				<ul>
+					<li>
+						<b>💼 Case - </b> NZXT H6 Flow
+					</li>
+					<li>
+						<b>🚄 Motherboard - </b>MSI Z390A MAX WIFI
+					</li>
+					<li>
+						<b>🧠 CPU - </b>Intel Core i7 13700K
+					</li>
+					<li>
+						<b>👁️ GPU - </b>GeForce RTX 3060
+					</li>
+					<li>
+						<b>🐏 RAM - </b>32GB DDR5
+					</li>
+					<li>
+						<b>💾 SSD - </b>Samsung 990 EVO 1TB
+					</li>
+				</ul>
+			</li>
+			<li>
+				<b>👀 Monitors - </b>Dell 24'' 144hz FHD Gaming Monitor <b>x2</b>
+			</li>
+			<li>
+				<b>🎙️ Microphone - </b> Blue Snowball iCE (Black)
+			</li>
+			<li>
+				<b>⌨️ Keyboard - </b>Glorious GMMK 2 (plus a Glorious wrist rest)
+			</li>
+			<li>
+				<b>🐁 Mouse - </b>Roccat Kane 100 Aimo
+			</li>
+		</ul>
+	</div>
 </Layout>
