--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -28,8 +28,8 @@ import { SITE_TITLE, SITE_DESCRIPTION, LINKS } from '../consts';
 				I go by <span class="white">Grayvox</span> online, or <span class="white">Gray</span> for short. 🐺 
 			</p>
 			<blockquote>
-				Grayvox <span class="quote-mini-text">/grā-vŏks/</span>
-				<ol class="quote-mini-text">
+				Grayvox <span class="mini-text">/grā-vŏks/</span>
+				<ol class="mini-text">
 					<li>
 						An insane individual, one of a kind yet not in a positive way all the time.
 					</li>
@@ -49,7 +49,7 @@ import { SITE_TITLE, SITE_DESCRIPTION, LINKS } from '../consts';
 				I am an avid multitasker and cannot focus on one thing for too long. Call it whatever you want, but it's <i>not</i> a trait I enjoy.
 			</p>
 			<p>
-				Currently, I'm:
+				Want to know what I'm up to? Well, let me introduce you to this fancy box with large amounts of <code>box-shadow</code> used on it.
 			</p>
 			<Status />
 			<p>
