--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -10,7 +10,7 @@
 	--box-shadow: 0 2px 6px rgba(var(--gray), 25%), 0 8px 24px rgba(var(--gray), 33%),
 		0 16px 32px rgba(var(--gray), 33%);
 }
-.quote-mini-text {
+.mini-text {
 	color: var(--blend-text);
 	font-size: 0.75em;
 	font-style: italic;
@@ -167,6 +167,9 @@ blockquote {
 hr {
 	border: none;
 	border-top: 1px solid rgb(var(--gray));
+}
+li {
+	margin-bottom: 1.5rem;
 }
 @media (max-width: 720px) {
 	body {
