--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -8,25 +8,20 @@ const today = new Date();
 	&copy; {today.getFullYear()} Grayvox. All rights reserved.
 	<div class="social-links">
 		<a href={LINKS.youtube} target="_blank" rel="noopener noreferrer">
-			<img src="https://img.icons8.com/?size=100&id=37326&format=png&color=CBD2E1" alt="YouTube" width="48" height="48">
+			<!-- <img src="https://img.icons8.com/?size=100&id=37326&format=png&color=CBD2E1" alt="YouTube" width="48" height="48"> -->
+			 <img src="/youtube-svgrepo-com.svg" alt="YouTube" width="48" height="48">
 		</a>
 		<a href={LINKS.twitch} target="_blank" rel="noopener noreferrer">
-			<svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="48" height="48" viewBox="0,0,256,256">
-				<g fill="#cbd2e1" fill-rule="nonzero" stroke="none" stroke-width="1" stroke-linecap="butt" stroke-linejoin="miter" stroke-miterlimit="10" stroke-dasharray="" stroke-dashoffset="0" font-family="none" font-weight="none" font-size="none" text-anchor="none" style="mix-blend-mode: normal"><g transform="scale(5.12,5.12)"><path d="M5.3125,1l-3.3125,8.8125v33.1875h11v6h7.40625l6,-6h9l12.59375,-12.5625v-29.4375zM11,6h32v22l-6,6h-12l-6,6v-6h-8zM20,13v14h6v-14zM30,13v14h6v-14z"></path></g></g>
-			</svg>
+			<img src="/twitch-svgrepo-com.svg" alt="Twitch" width="48" height="48">
 		</a>
 		<a href={LINKS.github} target="_blank" rel="noopener noreferrer">
-			<svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="48" height="48" viewBox="0,0,256,256">
-				<g fill="#cbd2e1" fill-rule="nonzero" stroke="none" stroke-width="1" stroke-linecap="butt" stroke-linejoin="miter" stroke-miterlimit="10" stroke-dasharray="" stroke-dashoffset="0" font-family="none" font-weight="none" font-size="none" text-anchor="none" style="mix-blend-mode: normal"><g transform="scale(5.12,5.12)"><path d="M17.791,46.836c0.711,-0.306 1.209,-1.013 1.209,-1.836v-5.4c0,-0.197 0.016,-0.402 0.041,-0.61c-0.014,0.004 -0.027,0.007 -0.041,0.01c0,0 -3,0 -3.6,0c-1.5,0 -2.8,-0.6 -3.4,-1.8c-0.7,-1.3 -1,-3.5 -2.8,-4.7c-0.3,-0.2 -0.1,-0.5 0.5,-0.5c0.6,0.1 1.9,0.9 2.7,2c0.9,1.1 1.8,2 3.4,2c2.487,0 3.82,-0.125 4.622,-0.555c0.934,-1.389 2.227,-2.445 3.578,-2.445v-0.025c-5.668,-0.182 -9.289,-2.066 -10.975,-4.975c-3.665,0.042 -6.856,0.405 -8.677,0.707c-0.058,-0.327 -0.108,-0.656 -0.151,-0.987c1.797,-0.296 4.843,-0.647 8.345,-0.714c-0.112,-0.276 -0.209,-0.559 -0.291,-0.849c-3.511,-0.178 -6.541,-0.039 -8.187,0.097c-0.02,-0.332 -0.047,-0.663 -0.051,-0.999c1.649,-0.135 4.597,-0.27 8.018,-0.111c-0.079,-0.5 -0.13,-1.011 -0.13,-1.543c0,-1.7 0.6,-3.5 1.7,-5c-0.5,-1.7 -1.2,-5.3 0.2,-6.6c2.7,0 4.6,1.3 5.5,2.1c1.699,-0.701 3.599,-1.101 5.699,-1.101c2.1,0 4,0.4 5.6,1.1c0.9,-0.8 2.8,-2.1 5.5,-2.1c1.5,1.4 0.7,5 0.2,6.6c1.1,1.5 1.7,3.2 1.6,5c0,0.484 -0.045,0.951 -0.11,1.409c3.499,-0.172 6.527,-0.034 8.204,0.102c-0.002,0.337 -0.033,0.666 -0.051,0.999c-1.671,-0.138 -4.775,-0.28 -8.359,-0.089c-0.089,0.336 -0.197,0.663 -0.325,0.98c3.546,0.046 6.665,0.389 8.548,0.689c-0.043,0.332 -0.093,0.661 -0.151,0.987c-1.912,-0.306 -5.171,-0.664 -8.879,-0.682c-1.665,2.878 -5.22,4.755 -10.777,4.974v0.031c2.6,0 5,3.9 5,6.6v5.4c0,0.823 0.498,1.53 1.209,1.836c9.161,-3.032 15.791,-11.672 15.791,-21.836c0,-12.682 -10.317,-23 -23,-23c-12.683,0 -23,10.318 -23,23c0,10.164 6.63,18.804 15.791,21.836z"></path></g></g>
-			</svg>
+			<img src="/github-svgrepo-com.svg" alt="GitHub" width="48" height="48">
 		</a>
 		<a href={LINKS.kofi} target="_blank" rel="noopener noreferrer">
-			<svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="48" height="48" viewBox="0,0,256,256">
-				<g fill="none" fill-rule="nonzero" stroke="none" stroke-width="1" stroke-linecap="butt" stroke-linejoin="miter" stroke-miterlimit="10" stroke-dasharray="" stroke-dashoffset="0" font-family="none" font-weight="none" font-size="none" text-anchor="none" style="mix-blend-mode: normal"><g transform="scale(5.12,5.12)"><path d="M29.26,23.96c0,0.91 -0.4,1.72 -1.03,2.28l-4.68,4.75l-4.69,-4.75c-0.63,-0.56 -1.03,-1.37 -1.03,-2.28c0,-1.69 1.38,-3.07 3.08,-3.07c0.9,0 1.72,0.39 2.28,1.02c0.14,0.15 0.26,0.31 0.36,0.48c0.09,-0.17 0.22,-0.33 0.36,-0.48c0.55,-0.63 1.37,-1.02 2.27,-1.02c1.7,0 3.08,1.38 3.08,3.07z" fill="#cbd2e1"></path><path d="M38.48,22.86c0,2.03 -1.53,3.71 -3.51,3.93v-7c0,-0.29 -0.03,-0.58 -0.09,-0.86c2.01,0.17 3.6,1.87 3.6,3.93z" fill="#cbd2e1"></path><path d="M25,2c-12.68,0 -23,10.32 -23,23c0,12.68 10.32,23 23,23c12.68,0 23,-10.32 23,-23c0,-12.68 -10.32,-23 -23,-23zM34.97,30.32v1.77c0,1.94 -1.57,3.52 -3.52,3.52h-14.93c-1.95,0 -3.52,-1.58 -3.52,-3.52v-14.06c0,-1.46 1.18,-2.64 2.64,-2.64h18.65c3.91,0 7.34,2.91 7.68,6.8c0.38,4.27 -2.86,7.89 -7,8.13z" fill="#cbd2e1"></path><g fill="#ffffff"><path d="M26.18,20.89c-0.9,0 -1.72,0.39 -2.27,1.02c-0.14,0.15 -0.27,0.31 -0.36,0.48c-0.1,-0.17 -0.22,-0.33 -0.36,-0.48c-0.56,-0.63 -1.38,-1.02 -2.28,-1.02c-1.7,0 -3.08,1.38 -3.08,3.07c0,0.91 0.4,1.72 1.03,2.28l4.69,4.75l4.68,-4.75c0.63,-0.56 1.03,-1.37 1.03,-2.28c0,-1.69 -1.38,-3.07 -3.08,-3.07z"></path></g><path d="M29.26,23.96c0,0.91 -0.4,1.72 -1.03,2.28l-4.68,4.75l-4.69,-4.75c-0.63,-0.56 -1.03,-1.37 -1.03,-2.28c0,-1.69 1.38,-3.07 3.08,-3.07c0.9,0 1.72,0.39 2.28,1.02c0.14,0.15 0.26,0.31 0.36,0.48c0.09,-0.17 0.22,-0.33 0.36,-0.48c0.55,-0.63 1.37,-1.02 2.27,-1.02c1.7,0 3.08,1.38 3.08,3.07z" fill="#cbd2e1"></path></g></g>
-			</svg>
+			<img src="/ko-fi-svgrepo-com.svg" alt="Ko-fi" width="48" height="48">
 		</a>
 		<a href={LINKS.linktree} target="_blank" rel="noopener noreferrer">
-			<img src="https://img.icons8.com/?size=100&id=7867&format=png&color=CBD2E1" alt="Linktree" width="48" height="48">
+			<img src="/link-svgrepo-com.svg" alt="Twitch" width="48" height="48">
 		</a>
 	</div>
 	<img src="/FindMe.png" alt="Find me elsewhere" style="margin-left: 2rem;">
