feat: Finish 'v2' post and fix CSS class in Roles
Finishes the post to announce the new website,
along with fixing the reference to an old class
name in Roles

--- a/src/components/Roles.astro
+++ b/src/components/Roles.astro
@@ -4,7 +4,7 @@ import { LINKS } from '../consts'
 
 <div class="special-box">
     <img src="/Sunglasses.png" width="64" alt="">
-    <h5>Grayvox <span class="quote-mini-text">he/him</span></h5>
+    <h5>Grayvox <span class="mini-text">he/him</span></h5>
     <p>
         <i>User joined on XXX, XX, XXXX.</i>
     </p>
