feat: Remove office setup and add inside jokes

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -40,68 +40,35 @@ import Layout from '../layouts/BlogPost.astro';
 		<span class="mini-text">(Outside of programming, that is.)</span>
 		<ul>
 			<li>
-				🕹️ Video games (Horror, RPG, and Retro 2D mainly)
+				📽️ Film and TV (I have a few minor favorites)
 			</li>
 			<li>
-				💽 Hardware engineering
+				🕹️ Video games (THE <b>LORE</b> CONSUMES ME)
 			</li>
 			<li>
-				🎨 Artist (Pixel art, voxel art, and 3D printing mainly)
+				💽 Hardware engineering (Oooh what does this button do-)
 			</li>
 			<li>
-				🏛️ Architecture
+				🎨 Art (Why can't reality have an undo tool)
 			</li>
 			<li>
-				🪩 3D modeling
+				🏛️ Architecture (I yearn for the mines)
 			</li>
 			<li>
-				🎥 Video editing
+				🪩 3D modeling (Look mom, I made a cube)
 			</li>
 			<li>
-				🎸 Guitar
+				🎸 Guitar (...and music in general)
 			</li>
 		</ul>
 	</div>
 	<br>
 	<div class="special-box">
-		<h3>Office Setup</h3>
+		<h3>Achievements</h3>
+		<span class="mini-text">... Well, nothing here yet. Maybe someday though...</span>
 		<ul>
 			<li>
-				<h5>🖥️ Computer</h5>
-			</li>
-			<li>
-				<ul>
-					<li>
-						<b>💼 Case - </b> NZXT H6 Flow
-					</li>
-					<li>
-						<b>🚄 Motherboard - </b>MSI Z390A MAX WIFI
-					</li>
-					<li>
-						<b>🧠 CPU - </b>Intel Core i7 13700K
-					</li>
-					<li>
-						<b>👁️ GPU - </b>GeForce RTX 3060
-					</li>
-					<li>
-						<b>🐏 RAM - </b>32GB DDR5
-					</li>
-					<li>
-						<b>💾 SSD - </b>Samsung 990 EVO 1TB
-					</li>
-				</ul>
-			</li>
-			<li>
-				<b>👀 Monitors - </b>Dell 24'' 144hz FHD Gaming Monitor <b>x2</b>
-			</li>
-			<li>
-				<b>🎙️ Microphone - </b> Blue Snowball iCE (Black)
-			</li>
-			<li>
-				<b>⌨️ Keyboard - </b>Glorious GMMK 2 (plus a Glorious wrist rest)
-			</li>
-			<li>
-				<b>🐁 Mouse - </b>Roccat Kane 100 Aimo
+				
 			</li>
 		</ul>
 	</div>
