--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -52,7 +52,7 @@ const posts = (await getCollection('blog')).sort(
 		<main>
 			<h3 class="center-text">✍️ <span>Writings</span> ✍️</h3>
 			<section>
-				<img class="top-img" src="/LatestBlogPost.png" alt="Check out my latest blog post">
+				<img class="top-img" src="/scribbles/LatestBlogPost.png" alt="Check out my latest blog post">
 				<ul>
 					{
 						posts.map((post) => (
@@ -68,7 +68,7 @@ const posts = (await getCollection('blog')).sort(
 						))
 					}
 				</ul>
-				<img class="bottom-img" src="/FoundTheEnd.png" alt="Welp, found the end. Congrats!">
+				<img class="bottom-img" src="/scribbles/FoundTheEnd.png" alt="Welp, found the end. Congrats!">
 			</section>
 		</main>
 		<Footer />
