--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -44,7 +44,7 @@ import { SITE_TITLE, SITE_DESCRIPTION, LINKS } from '../consts';
 					</li>
 				</ol>
 			</blockquote>
-			<img src="/FourthOption.png" alt="I'm the fourth option">
+			<img src="/scribbles/FourthOption.png" alt="I'm the fourth option">
 			<p>
 				I am an avid multitasker and cannot focus on one thing for too long. Call it whatever you want, but it's <i>not</i> a trait I enjoy.
 			</p>
