--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -9,22 +9,22 @@ const today = new Date();
 	<div class="social-links">
 		<a href={LINKS.youtube} target="_blank" rel="noopener noreferrer">
 			<!-- <img src="https://img.icons8.com/?size=100&id=37326&format=png&color=CBD2E1" alt="YouTube" width="48" height="48"> -->
-			 <img src="/youtube-svgrepo-com.svg" alt="YouTube" width="48" height="48">
+			 <img src="/svg/youtube-svgrepo-com.svg" alt="YouTube" width="48" height="48">
 		</a>
 		<a href={LINKS.twitch} target="_blank" rel="noopener noreferrer">
-			<img src="/twitch-svgrepo-com.svg" alt="Twitch" width="48" height="48">
+			<img src="/svg/twitch-svgrepo-com.svg" alt="Twitch" width="48" height="48">
 		</a>
 		<a href={LINKS.github} target="_blank" rel="noopener noreferrer">
-			<img src="/github-svgrepo-com.svg" alt="GitHub" width="48" height="48">
+			<img src="/svg/github-svgrepo-com.svg" alt="GitHub" width="48" height="48">
 		</a>
 		<a href={LINKS.kofi} target="_blank" rel="noopener noreferrer">
-			<img src="/ko-fi-svgrepo-com.svg" alt="Ko-fi" width="48" height="48">
+			<img src="/svg/ko-fi-svgrepo-com.svg" alt="Ko-fi" width="48" height="48">
 		</a>
 		<a href={LINKS.linktree} target="_blank" rel="noopener noreferrer">
-			<img src="/link-svgrepo-com.svg" alt="Twitch" width="48" height="48">
+			<img src="/svg/link-svgrepo-com.svg" alt="Twitch" width="48" height="48">
 		</a>
 	</div>
-	<img src="/FindMe.png" alt="Find me elsewhere" style="margin-left: 2rem;">
+	<img src="/scribbles/FindMe.png" alt="Find me elsewhere" style="margin-left: 2rem;">
 </footer>
 <style>
 	footer {
