feat: Add more interests and some edits

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -28,7 +28,7 @@ import Layout from '../layouts/BlogPost.astro';
 		<a href="https://ruby-lang.org"><img src="https://skillicons.dev/icons?i=ruby" /></a>
 		<a href="https://java.com"><img src="https://skillicons.dev/icons?i=java" /></a>
 		<a href="https://en.wikipedia.org/wiki/C_(programming_language)"><img src="https://skillicons.dev/icons?i=c" /></a>
-		<h5>Web Frontend</h5>
+		<h5>Frontend</h5>
 		<a href="https://astro.build"><img src="https://skillicons.dev/icons?i=astro" /></a>
 		<a href="https://vite.dev"><img src="https://skillicons.dev/icons?i=vite" /></a>
 		<h5>Game Dev</h5>
@@ -46,10 +46,13 @@ import Layout from '../layouts/BlogPost.astro';
 				🕹️ Video games (THE <b>LORE</b> CONSUMES ME)
 			</li>
 			<li>
-				💽 Hardware engineering (Oooh what does this button do-)
+				🪶 Writing (And giving my characters trauma)
 			</li>
 			<li>
 				🎨 Art (Why can't reality have an undo tool)
+			</li>
+			<li>
+				💽 Hardware engineering (Oooh what does this button do-)
 			</li>
 			<li>
 				🏛️ Architecture (I yearn for the mines)
@@ -65,10 +68,10 @@ import Layout from '../layouts/BlogPost.astro';
 	<br>
 	<div class="special-box">
 		<h3>Achievements</h3>
-		<span class="mini-text">... Well, nothing here yet. Maybe someday though...</span>
+		<span class="mini-text">... Well, this is awkward...</span>
 		<ul>
 			<li>
-				
+
 			</li>
 		</ul>
 	</div>
