style: Make one word italic

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -40,7 +40,7 @@ import Layout from '../layouts/BlogPost.astro';
 		<span class="mini-text">(Outside of programming, that is.)</span>
 		<ul>
 			<li>
-				📽️ Film and TV (I have a few minor favorites)
+				📽️ Film and TV (I have a few <i>minor</i> favorites)
 			</li>
 			<li>
 				🕹️ Video games (THE <b>LORE</b> CONSUMES ME)
