--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -9,12 +9,14 @@ import FormattedDate from '../../components/FormattedDate.astro';
 const posts = (await getCollection('blog')).sort(
 	(a, b) => b.data.pubDate.valueOf() - a.data.pubDate.valueOf()
 );
+
+const title = `Writings by ${SITE_TITLE}`
 ---
 
 <!doctype html>
 <html lang="en">
 	<head>
-		<BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
+		<BaseHead title={title} description={SITE_DESCRIPTION} />
 		<style>
 			main {
 				width: 960px;
