style: Reword interests slightly

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -46,7 +46,7 @@ import Layout from '../layouts/BlogPost.astro';
 				🕹️ Video games (THE <b>LORE</b> CONSUMES ME)
 			</li>
 			<li>
-				🪶 Writing (And giving my characters trauma)
+				🪶 Books (Reading, writing, smelling... I like the smell of books)
 			</li>
 			<li>
 				🎨 Art (Why can't reality have an undo tool)
