status: Update status 11/18/24

--- a/src/components/Status.astro
+++ b/src/components/Status.astro
@@ -6,20 +6,20 @@
     <h5>Currently, I'm...</h5>
     <ul>
         <li>
-            🔮 Building <a href="https://grayvox.itch.io/noirdo">Noirdo</a>, a little 8 bit stealth game about shadow creatures
+            🔴 Officially on my Twitch streamer arc
         </li>
         <li>
-            💾 Taking a course on <a href="https://www.boot.dev/courses/learn-memory-management-c">memory management with C</a>
+            🎓 Building an alternative education project
         </li>
         <li>
-            🐕 Writing the concept for a game about a dog
+            💾 Taking a course on <a href="https://www.boot.dev/courses/learn-memory-management-c" target="_blank" rel="noopener noreferrer">memory management with C</a>
         </li>
         <li>
-            😔 On a "break" from art (I can't art right now)
+            🧔🏼‍♂️ On <a href="https://www.theodinproject.com/paths/full-stack-ruby-on-rails" target="_blank" rel="noopener noreferrer">The Odin Project</a>'s Ruby on Rails track
         </li>
         <li>
-            🔴 Preparing for my Twitch streamer arc
+            🔮 On a hiatus from working on Noirdo (To be continued...)
         </li>
     </ul>
-    <p class="mini-text">Status last updated 10/23/2024</p>
+    <p class="mini-text">Status last updated 11/18/2024</p>
 </div>
