--- a/src/pages/projects/index.astro
+++ b/src/pages/projects/index.astro
@@ -4,13 +4,10 @@ import Header from '../../components/Header.astro';
 import Footer from '../../components/Footer.astro';
 import { SITE_TITLE, SITE_DESCRIPTION } from '../../consts';
 import { getCollection } from 'astro:content';
-import FormattedDate from '../../components/FormattedDate.astro';
 
-const posts = (await getCollection('blog')).sort(
-	(a, b) => b.data.pubDate.valueOf() - a.data.pubDate.valueOf()
-);
+const posts = (await getCollection('projects'));
 
-const title = `Writings by ${SITE_TITLE}`
+const title = `Projects by ${SITE_TITLE}`
 ---
 
 <!doctype html>
@@ -38,12 +35,18 @@ const title = `Writings by ${SITE_TITLE}`
 			ul li a {
 				display: block;
 			}
-			ul li a p {
-				margin-bottom: 10px;
+			h4 {
+				margin-top: 20px;
 			}
-			.top-img {
-				margin-left: 2rem;
-			}
+            .project-img {
+    			display: block;
+    			margin-left: auto;
+    			margin-right: auto;
+    			width: 100%;
+    			max-height: 200px;
+    			object-fit: cover;
+    			overflow: hidden;
+			}	
 			.bottom-img {
 				margin-left: 50rem;
 			}
@@ -52,17 +55,16 @@ const title = `Writings by ${SITE_TITLE}`
 	<body>
 		<Header />
 		<main>
-			<h3 class="center-text">✍️ <span>Writings</span> ✍️</h3>
+			<h3 class="center-text">⛏️ <span>Projects</span> ⛏️</h3>
 			<section>
-				<img class="top-img" src="/scribbles/LatestBlogPost.png" alt="Check out my latest blog post">
 				<ul>
 					{
 						posts.map((post) => (
 							<li>
-								<a href={`/blog/${post.slug}/`} class="special-box post">
+								<a href={`/projects/${post.slug}/`} class="special-box post">
 									<div>
+										<img class="project-img" src={post.data.image.src} alt={post.data.image.alt}>
 										<h4><b>{post.data.title}</b></h4>
-										<p class="date"><i>🪶 Committed to writing <b><FormattedDate date={post.data.pubDate} /></b></i></p>
 									</div>
 									<p>{post.data.description}</p>
 								</a>
