--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,27 +1,33 @@
 ---
+import { Icon } from 'astro-icon/components';
 import { LINKS } from "../consts";
 
 const today = new Date();
 ---
 
+<style>
+	[data-icon] {
+		width: 48px;
+		height: 48px;
+	}
+</style>
+
 <footer>
 	&copy; {today.getFullYear()} Grayvox. All rights reserved.
 	<div class="social-links">
 		<a href={LINKS.youtube} target="_blank" rel="noopener noreferrer">
-			<!-- <img src="https://img.icons8.com/?size=100&id=37326&format=png&color=CBD2E1" alt="YouTube" width="48" height="48"> -->
-			 <img src="/svg/youtube-svgrepo-com.svg" alt="YouTube" width="48" height="48">
+			<Icon name="mdi:youtube" />
 		</a>
 		<a href={LINKS.twitch} target="_blank" rel="noopener noreferrer">
-			<img src="/svg/twitch-svgrepo-com.svg" alt="Twitch" width="48" height="48">
-		</a>
+			<Icon name="mdi:twitch" />
 		<a href={LINKS.github} target="_blank" rel="noopener noreferrer">
-			<img src="/svg/github-svgrepo-com.svg" alt="GitHub" width="48" height="48">
+			<Icon name="mdi:github" />
 		</a>
 		<a href={LINKS.kofi} target="_blank" rel="noopener noreferrer">
-			<img src="/svg/ko-fi-svgrepo-com.svg" alt="Ko-fi" width="48" height="48">
+			<Icon name="mdi:coffee" />
 		</a>
 		<a href={LINKS.linktree} target="_blank" rel="noopener noreferrer">
-			<img src="/svg/link-svgrepo-com.svg" alt="Twitch" width="48" height="48">
+			<Icon name="mdi:link" />
 		</a>
 	</div>
 	<img src="/scribbles/FindMe.png" alt="Find me elsewhere" style="margin-left: 2rem;">
