Remove unneeeded date on about me

--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -53,7 +53,7 @@ const { title, description, pubDate, updatedDate } = Astro.props;
 					<div class="title">
 						<div class="date">
 							<h1>{title}</h1>
-							<FormattedDate date={pubDate} />
+							{pubDate ? <FormattedDate date={pubDate} /> : ''}
 							{
 								updatedDate && (
 									<div class="last-updated-on">
