--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -8,6 +8,7 @@ import FormattedDate from '../../components/FormattedDate.astro';
 
 const posts = (await getCollection('blog')).sort(
 	(a, b) => b.data.pubDate.valueOf() - a.data.pubDate.valueOf()
+	// Will fix up later
 );
 
 const title = `Writings by ${SITE_TITLE}`
