--- a/src/pages/questions.astro
+++ b/src/pages/questions.astro
@@ -3,7 +3,6 @@ import BaseHead from '../components/BaseHead.astro';
 import Header from '../components/Header.astro';
 import Footer from '../components/Footer.astro';
 import { SITE_TITLE, SITE_DESCRIPTION, FAQ } from '../consts';
-import Question from '../components/Question.astro'
 
 const title = `A Brief Interrogation of ${SITE_TITLE}`
 ---
@@ -41,7 +40,8 @@ const title = `A Brief Interrogation of ${SITE_TITLE}`
                     {
                         FAQ.map((entry) => (
                             <li>
-                                <Question question={entry[0]} answer={entry[1]} />
+                                <h4>{entry[0]}</h4>
+                                <p>{entry[1]}</p>
                             </li>
                         ))
                     }
