feat: Add finished FAQ page and some minor edits

--- a/src/components/Roles.astro
+++ b/src/components/Roles.astro
@@ -2,7 +2,7 @@
 import { LINKS } from '../consts'
 ---
 
-<div class="special-box">
+<div id="roles" class="special-box">
     <img src="/Sunglasses.png" width="64" alt="">
     <h5>Grayvox <span class="mini-text">he/him</span></h5>
     <p>
