--- a/src/pages/questions.astro
+++ b/src/pages/questions.astro
@@ -24,9 +24,6 @@ const title = `A Brief Interrogation of ${SITE_TITLE}`
 			ul li {
                 list-style-type: none;
 			}
-			ul li a {
-				display: block;
-			}
 			ul li p {
                 line-height: 30px;
 				margin-bottom: 10px;
@@ -82,46 +79,114 @@ const title = `A Brief Interrogation of ${SITE_TITLE}`
                             upon... well, you get the idea.
                         </p>
                     </li>
+                    <!-- 
+                        <li><b>CPU:</b> Intel i7-13700K</li>
+                        <li><b>GPU:</b> GeForce RTX 3060 12GB</li>
+                        <li><b>RAM:</b> 32GB DDR5</li>
+                        <li><b>Hard Drive 1:</b> Samsung 990 EVO 1TB SSD</li>
+                        <li><b>Motherboard:</b> MSI Z790-A PRO MAX WIFI</li>
+                    -->
                     <li id="question-four">
-                        <h4>What sort of computer do you have?</h4>
+                        <h4>What are you working on right now?</h4>
                         <p>
-                            I built it myself, and will probably continue to do that every single time I need a new 
-                            computer. If you're curious about the specs:
+                            Whatever my brain decides made sense. I try to keep that up to date on my <a href="/#status">
+                            Status</a> though.
                         </p>
-                        <br>
-                        <ul>
-                            <li><b>CPU:</b> Intel i7-13700K</li>
-                            <li><b>GPU:</b> GeForce RTX 3060 12GB</li>
-                            <li><b>RAM:</b> 32GB DDR5</li>
-                            <li><b>Hard Drive 1:</b> Samsung 990 EVO 1TB SSD</li>
-                            <li><b>Motherboard:</b> MSI Z790-A PRO MAX WIFI</li>
-                        </ul>
                     </li>
                     <li id="question-five">
-                        <h4>What software do you use?</h4>
+                        <h4>Favorite programming language?</h4>
                         <p>
-                            I try a lot of different stuff honestly, meaning this is subject to change and I may or may not
-                            forget to update it enough:
+                            Every language is a tool, each with it's own uses, pros and cons. So I don't have a favorite yet.
                         </p>
-                        <br>
+                        <p>
+                            ...But don't worry, if I did, it wouldn't be Java. <i>*shudders*</i>
+                        </p>
+                    </li>
+                    <li id="question-six">
+                        <h4>Favorite game?</h4>
+                        <p>You think I can name just one? Fool. Here is a list I wrote simply because.</p>
                         <ul>
-                            <li>
-                                <b>OS:</b> Windows 11 with WSL (running Ubuntu)
-                            </li>
-                            <li>
-                                <b>Code Editor:</b> VS Code (for everything but Java) and IntelliJ IDEA (for Java and 
-                                JVM stuff)
-                            </li>
-                            <li><b>Game Engine:</b> Godot Engine</li>
-                            <li><b>Pixel Art and Animation:</b> Aseprite</li>
-                            <li><b>Sketching and General Art:</b> Krita</li>
-                            <li><b>3D Modeling:</b> Blender and Material Maker</li>
-                            <li><b>Recording and Streaming:</b> OBS Studio</li>
-                            <li><b>Video Editing:</b> DaVinci Resolve</li>
-                            <li><b>Photo Editing:</b> Figma (for thumbnail design), and GIMP (for photo editing)</li>
-                            <li><b>Workspace and Note Taking:</b> Notion</li>
-                            <li><b>To Do List:</b> TickTick</li>
+                            <li>⛏️ Minecraft</li>
+                            <li>👻 Phasmophobia</li>
+                            <li>🎥 Content Warning</li>
+                            <li>💀 Undertale</li>
+                            <li>💜 Heartbound 💛</li>
+                            <li>🔍 Tangle Tower</li>
+                            <li>👁️ OMORI</li>
+                            <li>🐤 Stardew Valley</li>
+                            <li>☢️ Lethal Company</li>
+                            <li>🏔️ Celeste</li>
                         </ul>
+                        <p>Of course, that's subject to change over time as I will never stop playing games.</p>
+                    </li>
+                    <li id="question-seven">
+                        <h4>Favorite TV show?</h4>
+                        <p>...I just said earlier- Fine. Use another singular. But I will stick to my lists.</p>
+                        <ul>
+                            <li>❤️‍🩹 Arcane</li>
+                            <li>🌲 Gravity Falls</li>
+                            <li>🦉 The Owl House</li>
+                            <li>🥬 Avatar: The Last Airbender</li>
+                            <li>🪦 Lockwood and Co... <i>*sobbing*</i> GIVE IT BACK, NETFLIX-</li>
+                            <li>🧙‍♂️ Merlin</li>
+                            <li>🕵️‍♂️ Sherlock</li>
+                            <li>🐕 Bluey</li>
+                            <li>⚔️ She-Ra and the Princesses of Power (Netflix)</li>
+                            <li>🦁 Voltron (Netflix)</li>
+                        </ul>
+                    </li>
+                    <li id="question-eight">
+                        <h4>Favorite movie?</h4>
+                        <p>...You really don't learn do you...</p>
+                        <ul>
+                            <li>🕷️ Spider Man: Across the Spider-Verse</li>
+                            <li>🛰️ Interstellar</li>
+                            <li>📜 National Treasure</li>
+                            <li>👰 The Princess Bride</li>
+                            <li>✉️ Klaus</li>
+                            <li>🤖 Wall-E</li>
+                            <li>🐹 Bolt</li>
+                            <li>🐉 How to Train Your Dragon</li>
+                            <li>🫏 Shrek</li>
+                            <li>🍳 Tangled*</li>
+                        </ul>
+                        <span class="mini-text">*I was forced into putting that on here. You know who you are.</span>
+                    </li>
+                    <li id="question-nine">
+                        <h4>...Favorite book?</h4>
+                        <p>. . . <b>You-</b> Fine. Just take the list.</p>
+                        <ul>
+                            <li>🎭 The Phantom of the Opera</li>
+                            <li>🤕 Unwind</li>
+                            <li>🏹 The Hunger Games</li>
+                            <li>🔱 Percy Jackson and the Olympians</li>
+                            <li>🏺 Heroes of Olympus</li>
+                            <li>👴🏻 The Giver</li>
+                            <li>🪦 Lockwood and Co (...yes, again)</li>
+                            <li>🌫️ Mistborn</li>
+                            <li>💍 The Lord of the Rings</li>
+                            <li>⛰️ The Hobbit</li>
+                        </ul>
+                    </li>
+                    <li id="question-ten">
+                        <h4>Do you enjoy long walks on the beach?</h4>
+                        <p>
+                            ...Yes? I do? Actually I love the beach, and the mountains, but scenic walks on the beach 
+                            are like no other, really. Especially when you're right at the water's edge, and the waves 
+                            hit your feet- . . . oh wait, now I know what this is about-
+                        </p>
+                    </li>
+                    <li id="question-eleven">
+                        <h4>And how rich are you?</h4>
+                        <p>...Oh I see how it is.</p>
+                        <p>
+                            Well rich enough, thank you. I can live in a cave with what would barely pass as WiFi, 
+                            thank you very much.
+                        </p>
+                    </li>
+                    <li id="question-twelve">
+                        <h4>Are you actually a wolf?</h4>
+                        <p>...This Q&A session is over. <i>*runs*</i></p>
                     </li>
                 </div>
             </ul>
