--- a/src/components/Status.astro
+++ b/src/components/Status.astro
@@ -6,20 +6,20 @@
     <h5>Currently, I'm...</h5>
     <ul>
         <li>
-            🔴 Officially on my Twitch streamer arc
-        </li>
-        <li>
-            🎓 Building an alternative education project
-        </li>
-        <li>
-            💾 Taking a course on <a href="https://www.boot.dev/courses/learn-memory-management-c" target="_blank" rel="noopener noreferrer">memory management with C</a>
+            ❤️‍🩹 Trying to get over the Arcane finale </a>
         </li>
         <li>
             🧔🏼‍♂️ On <a href="https://www.theodinproject.com/paths/full-stack-ruby-on-rails" target="_blank" rel="noopener noreferrer">The Odin Project</a>'s Ruby on Rails track
         </li>
         <li>
-            🔮 On a hiatus from working on Noirdo (To be continued...)
+            🐕 Laying the ground work for a game about a dog
+        </li>
+        <li>
+            🚧 Having a work-life balance crisis (It's fine)
+        </li>
+        <li>
+            🎄 Successfully Decking The Halls (Merry Christmas to whoever reads this!)
         </li>
     </ul>
-    <p class="mini-text">Status last updated 11/18/2024</p>
+    <p class="mini-text">Status last updated 12/17/2024</p>
 </div>
