feat: Add to Achievements and noreferrers to links

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -20,18 +20,18 @@ import Layout from '../layouts/BlogPost.astro';
 	<div class="special-box">
 		<h3>Technologies</h3>
 		<h5>Languages</h5>
-		<a href="https://developer.mozilla.org/en-US/docs/Web/HTML"><img src="https://skillicons.dev/icons?i=html" /></a>
-		<a href="https://developer.mozilla.org/en-US/docs/Web/CSS"><img src="https://skillicons.dev/icons?i=css" /></a>
-		<a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript"><img src="https://skillicons.dev/icons?i=js" /></a>
-		<a href="https://typescriptlang.org"><img src="https://skillicons.dev/icons?i=ts" /></a>
-		<a href="https://ruby-lang.org"><img src="https://skillicons.dev/icons?i=ruby" /></a>
-		<a href="https://java.com"><img src="https://skillicons.dev/icons?i=java" /></a>
-		<a href="https://en.wikipedia.org/wiki/C_(programming_language)"><img src="https://skillicons.dev/icons?i=c" /></a>
+		<a href="https://developer.mozilla.org/en-US/docs/Web/HTML" rel="noopener noreferrer"><img src="https://skillicons.dev/icons?i=html" /></a>
+		<a href="https://developer.mozilla.org/en-US/docs/Web/CSS" rel="noopener noreferrer"><img src="https://skillicons.dev/icons?i=css" /></a>
+		<a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript" rel="noopener noreferrer"><img src="https://skillicons.dev/icons?i=js" /></a>
+		<a href="https://typescriptlang.org" rel="noopener noreferrer"><img src="https://skillicons.dev/icons?i=ts" /></a>
+		<a href="https://ruby-lang.org" rel="noopener noreferrer"><img src="https://skillicons.dev/icons?i=ruby" /></a>
+		<a href="https://java.com" rel="noopener noreferrer"><img src="https://skillicons.dev/icons?i=java" /></a>
+		<a href="https://en.wikipedia.org/wiki/C_(programming_language)" rel="noopener noreferrer"><img src="https://skillicons.dev/icons?i=c" /></a>
 		<h5>Frontend</h5>
-		<a href="https://astro.build"><img src="https://skillicons.dev/icons?i=astro" /></a>
-		<a href="https://vite.dev"><img src="https://skillicons.dev/icons?i=vite" /></a>
+		<a href="https://astro.build" rel="noopener noreferrer"><img src="https://skillicons.dev/icons?i=astro" /></a>
+		<a href="https://vite.dev" rel="noopener noreferrer"><img src="https://skillicons.dev/icons?i=vite" /></a>
 		<h5>Game Dev</h5>
-		<a href="https://godotengine.org"><img src="https://skillicons.dev/icons?i=godot" /></a>
+		<a href="https://godotengine.org" rel="noopener noreferrer"><img src="https://skillicons.dev/icons?i=godot" /></a>
 	</div>
 	<br>
 	<div class="special-box">
@@ -67,10 +67,13 @@ import Layout from '../layouts/BlogPost.astro';
 	<br>
 	<div class="special-box">
 		<h3>Achievements</h3>
-		<span class="mini-text">... Well, this is awkward...</span>
+		<span class="mini-text">Some things I've done, somehow.</span>
 		<ul>
 			<li>
-
+				🎮 Completed 1 game jam with a game called <a href="https://grayvox.itch.io/noirdo" rel="noopener noreferrer">Noirdo</a>.
+			</li>
+			<li>
+				📋 Created a <a href="https://github.com/Grayvox/rails-alternatives" rel="nopener noreferrer">simple repo</a> for alternatives to Ruby on Rails.
 			</li>
 		</ul>
 	</div>
